alignment issues

--- a/src/app/styles/about.css
+++ b/src/app/styles/about.css
@@ -11,7 +11,7 @@
     color: #E4E4E4;
     font-size: 5vmin;
     font-weight: 600;
-    margin-bottom: 1vmin;
+    margin: 10vmin 0 0.5vmin 0;
 }
 .smallAbout{
     color: #A29E9E;
@@ -33,7 +33,7 @@
 .contactContainer {
     display: flex;
     gap: 1vmin;
-    margin: 2vmin 0 4vmin 0;
+    margin: 2vmin 0 10vmin 0;
 }
 
 .iconWrapper {
